# red-candle

./: .gitignore  .gitpod.yml  .rspec  .yardopts  CLAUDE.md  CUDA_SUPPORT.md  Candle.html  Cargo.toml  DEVICE_SUPPORT.md  GITHUB_SECRETS_SETUP.md  Gemfile  HUGGINGFACE.md  LICENSE  METAL_SUPPORT.md  MODEL_SUPPORT.md  README.md  README_SD3.md  Rakefile  S3_CACHE_SETUP.md  _index.html  candle.gemspec  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
Candle/: BuildInfo.html  DeviceUtils.html  EmbeddingModel.html  EmbeddingModelType.html  GazetteerEntityRecognizer.html  HybridNER.html  (+9 more)
ext/candle/: Cargo.toml  Makefile  build.rs  extconf.rb  rustfmt.toml
ext/candle/src/: lib.rs  ner.rs  reranker.rs
ext/candle/src/image_gen/: fp8.rs  fp8_loader.rs  mod.rs  stable_diffusion.rs  stable_diffusion_complex.rs
ext/candle/src/image_gen/gguf/: ggml_quant.rs  ggml_quant_test.rs  gguf_loader.rs  gguf_mmdit.rs  gguf_mmdit_vb.rs  gguf_tests.rs  gguf_text_encoder.rs  gguf_vae.rs  mod.rs  quantized_sd3.rs  quantized_var_builder.rs
ext/candle/src/image_gen/sd3/: mod.rs  model.rs  pipeline.rs  scheduler.rs  thread_safe.rs  vae.rs
ext/candle/src/llm/: constrained_generation_test.rs  gemma.rs  generation_config.rs  llama.rs  mistral.rs  mod.rs  phi.rs  quantized_gguf.rs  qwen.rs  text_generation.rs
ext/candle/src/llm/quantized/: gemma.rs  llama.rs  mistral.rs  mod.rs
ext/candle/src/model/: config.rs  errors.rs  mod.rs  rb_d_type.rs  rb_device.rs  rb_model.rs  rb_q_tensor.rs  rb_result.rs  rb_tensor.rs  utils.rs
ext/candle/src/ruby/: device.rs  dtype.rs  embedding_model.rs  errors.rs  image_gen.rs  llm.rs  mod.rs  model.rs  ner.rs  qtensor.rs  reranker.rs  result.rs  structured.rs  tensor.rs  tokenizer.rs  utils.rs
ext/candle/src/structured/: integration_test.rs  mod.rs  schema_processor.rs  vocabulary_adapter.rs  vocabulary_adapter_real_test.rs  vocabulary_adapter_simple_test.rs
ext/candle/src/tokenizer/: loader.rs  mod.rs
ext/candle/tests/: device_tests.rs  tensor_tests.rs
(+163 files in other folders)
