[package]
name = "candle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candle-core = "0.9.0"
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
tokenizers = { version = "0.21.1", default-features = true, features = ["fancy-regex"] }
hf-hub = "0.4.2"
half = "2.6.0"
magnus = "0.7.1"
safetensors = "0.3"
serde_json = "1.0"

[features]
mkl = []
accelerate = []