[package]
name = "candle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }
tokenizers = { version = "0.21.1", default-features = true, features = ["fancy-regex"] }
hf-hub = "0.4.2"
half = "2.6.0"
magnus = "0.7.1"
safetensors = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt", "macros"] }
rand = "0.8"

[features]
mkl = []
accelerate = []